# radico

./: Cargo.toml  Cross.toml  LICENSE  README.md  rust-toolchain
.cargo/: config.toml
.github/workflows/: release.yml
assets/: n001.aac  n002.aac  n003.aac  n004.aac  n005.aac  n006.aac  silent.aac
docker/: Dockerfile.arm-unknown-linux-gnueabihf  Dockerfile.x86_64-unknown-linux-musl  Dockerfile_arm-unknown-linux-gnueabihf
redlux/: Cargo.toml
redlux/src/: lib.rs
src/: api.rs  args.rs  errors.rs  lib.rs  logger.rs  macros.rs  main.rs  player.rs  sink.rs  sleep.rs  state.rs  stream.rs  terminal.rs  worker.rs  xml.rs
src/api/: mod.rs  worker.rs  xml.rs
src/audio/: assets.rs  mod.rs  player.rs  sink.rs  stream.rs
src/terminal/: args.rs  mod.rs
src/util/: macros.rs  menu.rs  mod.rs  sleep.rs  state.rs
